# deep-research

./: .env.example  LICENSE  Makefile  README.md  config.yaml  langgraph.json  main.py  plot-graph.ipynb  pyproject.toml  server.py  test.ipynb
src/: app.py  configuration.py  graph.py  prompts.py  utils.py  workflow.py
tests/: test_app.py
